[package]
name = "pallet-transaction-payment-free"
version = { workspace = true }
authors = [
	"Digital Catapult <https://www.digicatapult.org.uk>",
	"Parity Technologies <admin@parity.io>",
]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/digicatapult/sqnc-node/"
description = "FRAME pallet to manage transaction payments"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-info = { workspace = true, features = ["derive", "serde"] }
parity-scale-codec = { workspace = true, features = ["derive"] }
serde = { workspace = true, optional = true, features = ["derive"] }
sp-std = { workspace = true }
sp-runtime = { workspace = true, features = ["serde"] }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-io = { workspace = true }
sp-core = { workspace = true, features = ["serde"] }
log = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["std"]
std = [
	"serde",
	"parity-scale-codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-core/std",
	"pallet-balances/std",
]
try-runtime = ["frame-support/try-runtime"]
