[package]
authors = ['Digital Catapult <https://www.digicatapult.org.uk>']
description = 'A FRAME pallet for handling non-fungible tokens'
edition = '2021'
license = 'Apache-2.0'
repository = 'https://github.com/digicatapult/dscp-node/'
name = 'pallet-utxo-nft'
version = "6.1.2"


[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
sp-core = { workspace = true, optional = true, features = ["serde"] }
scale-info = { workspace = true, features = ["derive", "serde"] }
parity-scale-codec = { workspace = true, features = ["derive"] }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true, features = ["serde"] }
sp-io = { workspace = true }
sp-std = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }

dscp-pallet-traits = { default-features = false, path = '../traits' }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
sp-core = { workspace = true }


[features]
default = ['std']
std = [
    'parity-scale-codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'sp-std/std',
    'dscp-pallet-traits/std',
]
runtime-benchmarks = ['frame-benchmarking', 'sp-core']
try-runtime = ["frame-support/try-runtime"]
