[package]
authors = ['Digital Catapult <https://www.digicatapult.org.uk>']
description = 'Shared types used by dscp-runtime'
edition = '2021'
license = 'Apache-2.0'
repository = 'https://github.com/digicatapult/dscp-node/'
name = 'dscp-runtime-types'
version = "1.0.1"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive", "serde"] }
parity-scale-codec = { workspace = true, features = ["derive"] }
frame-support = { workspace = true }
sp-core = { workspace = true, features = ["serde"] }
sp-runtime = { workspace = true, features = ["serde"] }
strum = { version = "0.24.1", features = [] }
strum_macros = { version = "0.24.3", features = [] }

pallet-process-validation = { default-features = false, path = '../../pallets/process-validation' }

[features]
default = ['std']
std = [
    'parity-scale-codec/std',
    'frame-support/std',
    'sp-core/std',
    'sp-runtime/std',
    "pallet-process-validation/std",
]
