[package]
name = "dscp-lang"
authors = ['Digital Catapult <https://www.digicatapult.org.uk>']
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
exitcode = "1.1.2"
lazy_static = "1.4.0"
pest = "2.6"
pest_derive = "2.6"
dscp-runtime-types = { path = '../../runtime/types' }
serde = { version = "1.0.189" }
serde_json = { version = "1.0.107" }
