[package]
name = "sqnc-lang"
authors = ['Digital Catapult <https://www.digicatapult.org.uk>']
version = "0.4.0"
edition = "2021"

[lib]
name = "sqnc_lang"
path = "src/lib.rs"

[[bin]]
name = "sqnc-lang"
path = "src/main.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
clap = { workspace = true }
exitcode = { workspace = true }
lazy_static = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
thiserror = { workspace = true }

sqnc-runtime-types = { path = '../../runtime/types' }
